# multi_client_chat_application

./: .gitignore  CMakeLists.txt  README.md
db/deadpanda/: info.txt
db/deadpanda0/: info.txt
doc/: Doxyfile
include/: Client.hpp  Server.hpp
lib/binary_protocol/: CMakeLists.txt
lib/binary_protocol/include/: BinaryProtocol.hpp
lib/binary_protocol/src/: BinaryProtocol.cpp  main.cpp
lib/graphical_interface/: CMakeLists.txt
lib/graphical_interface/include/: Window.hpp
lib/graphical_interface/sample/: main.cpp
lib/graphical_interface/src/: Window.cpp
lib/server_logging/: CMakeLists.txt
lib/server_logging/include/: Logging.hpp
lib/utils/: CMakeLists.txt
lib/utils/include/: Utils.hpp
lib/utils/sample/: main.cpp
src/client/: Client.cpp  main.cpp
src/server/: Server.cpp  main.cpp
